--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@freakycoder/react-native-header-view": "^1.1.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^12.3.0",
@@ -16,18 +17,29 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~42.0.1",
-    "expo-image-picker": "~10.2.2",
+    "expo-clipboard": "~1.1.0",
+    "expo-constants": "~11.0.1",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.4",
-    "firebase": "^8.8.0",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^4.0.6",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.13.12",
+    "unimodules-permissions-interface": "^6.1.0",
+    "react-native-gorgeous-header": ">= 0.1.0",
+    "react-native-classic-header": ">= 0.1.0",
+    "react-native-modern-header": ">= 0.1.0",
+    "react-native-apple-header": ">= 0.1.0",
+    "react-native-profile-header": ">= 0.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
